--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "cookie": "^0.6.0",
     "cors": "^2.8.5",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.436.0",
     "next": "14.2.4",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
