--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "cors": "^2.8.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
-    "next": "14.2.4",
+    "next": "^14.2.13",
     "razorpay": "^2.9.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
