--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@iconify/icons-heroicons-solid": "^1.2.6",
+    "@react-icons/all-files": "^4.1.0",
+    "@types/crypto-js": "^4.2.2",
     "axios": "^1.7.3",
     "cookie": "^0.6.0",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
     "next": "^14.2.13",
