--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
     "next": "^14.2.13",
+    "nodemailer": "^6.9.15",
     "razorpay": "^2.9.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
