--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "razorpay": "^2.9.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "eslint": "^8",
